--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -62,7 +62,7 @@ jobs:
             echo "TAG=devel" >> $GITHUB_ENV
             echo "DRAFT=false" >> $GITHUB_ENV
           elif ${{ github.event_name == 'workflow_dispatch' }}; then
-            echo "TAG=${{ github.event_name.inputs.tag }}" >> $GITHUB_ENV
+            echo "TAG=${{ github.event.inputs.tag }}" >> $GITHUB_ENV
             echo "DRAFT=true" >> $GITHUB_ENV
           fi
       - name: checkout CCTools from tag
