PLEDGE: Move to metadata, add getdents, initial error support - Moved to metadata flags, got rid of stat too - Added getdents64 to tracing and it is also wrapped in the enforcer - Moved rel2abspath to list_util - Updated the tracing and enforcing to be logically consistent, for   example, open is now metadata

--- a/devel/pledge/src/Makefile
+++ b/devel/pledge/src/Makefile
@@ -8,11 +8,11 @@ TARGETS = $(LIBRARIES) $(PROGRAMS)
 
 EXTERNAL_DEPENDENCIES = $(CCTOOLS_HOME)/dttools/src/libdttools.a
 
-SOURCES = pledge.c list_util.c util.c enforcer.c
-COMMON_SRCS = list_util.c util.c
+SOURCES = pledge.c list_util.c enforcer.c
+COMMON_SRCS = list_util.c
 
 OBJECTS = list_util.o util.o pledge.o enforcer.o
-OBJECTS_PLEDGE = list_util.o util.o pledge.o
+OBJECTS_PLEDGE = list_util.o pledge.o
 
 # If we want to color output while enforcing
 # DEFS = -DCOLOR_ENFORCING
