--- a/taskvine/src/tools/Makefile
+++ b/taskvine/src/tools/Makefile
@@ -5,9 +5,12 @@ LOCAL_LINKAGE+=${CCTOOLS_HOME}/taskvine/src/manager/libtaskvine.a ${CCTOOLS_HOME
 LOCAL_CCFLAGS+=-I ${CCTOOLS_HOME}/taskvine/src/manager
 
 PROGRAMS = vine_status vine_benchmark
-SCRIPTS = vine_graph_log vine_plot_taskgraph vine_graph_workers vine_plot_txn_log vine_profile_dispatch vine_submit_workers vine_transfer_plot_animate vine_plot_compose
+SCRIPTS = vine_plot_performance vine_plot_taskgraph vine_plot_workers vine_plot_txn_log vine_submit_workers vine_plot_compose
 TEST_PROGRAMS = vine_test
 TARGETS = $(PROGRAMS) $(TEST_PROGRAMS)
+
+# These are useful development tools but not meant for end user consumption.
+DEVEL_SCRIPTS = vine_profile_dispatch vine_transfer_plot_animate
 
 all: $(TARGETS)
 
