done adding algorithms

--- a/dttools/src/Makefile
+++ b/dttools/src/Makefile
@@ -16,6 +16,8 @@ SOURCES = \
 	bucketing.c \
 	bucketing_exhaust.c \
 	bucketing_greedy.c \
+	bucketing_det_exhaust.c \
+	bucketing_det_greedy.c \
 	bucketing_manager.c \
 	buffer.c \
 	catalog_query.c \
@@ -137,6 +139,8 @@ HEADERS_PUBLIC = \
 	bucketing.h \
 	bucketing_exhaust.h \
 	bucketing_greedy.h \
+	bucketing_det_exhaust.h \
+	bucketing_det_greedy.h \
 	bucketing_manager.h \
 	buffer.h \
 	category.h \
