refactor exhaust bucketing algos

--- a/dttools/src/Makefile
+++ b/dttools/src/Makefile
@@ -18,6 +18,7 @@ SOURCES = \
 	bucketing_greedy.c \
 	bucketing_det_exhaust.c \
 	bucketing_det_greedy.c \
+	bucketing_exhaust_common.c \
 	bucketing_manager.c \
 	buffer.c \
 	catalog_query.c \
@@ -141,6 +142,7 @@ HEADERS_PUBLIC = \
 	bucketing_greedy.h \
 	bucketing_det_exhaust.h \
 	bucketing_det_greedy.h \
+	bucketing_exhaust_common.h \
 	bucketing_manager.h \
 	buffer.h \
 	category.h \
