add skip list implementation

--- a/dttools/src/Makefile
+++ b/dttools/src/Makefile
@@ -105,6 +105,7 @@ SOURCES = \
 	shell.c \
 	sh_popen.c\
 	sigdef.c \
+	skip_list.c \
 	sleeptools.c \
 	sort_dir.c \
 	stats.c \
@@ -167,6 +168,7 @@ HEADERS_PUBLIC = \
 	progress_bar.h \
 	rmonitor_poll.h \
 	rmsummary.h \
+	skip_list.h \
 	stringtools.h \
 	text_array.h \
 	text_list.h \
@@ -194,7 +196,7 @@ PROGRAMS = $(MOST_PROGRAMS) catalog_query
 
 SCRIPTS = cctools_gpu_autodetect
 TARGETS = $(LIBRARIES) $(PRELOAD_LIBRARIES) $(PROGRAMS) $(TEST_PROGRAMS)
-TEST_PROGRAMS = auth_test disk_alloc_test jx_test microbench multirun jx_count_obj_test jx_canonicalize_test jx_merge_test hash_table_offset_test hash_table_fromkey_test hash_table_benchmark histogram_test category_test jx_binary_test bucketing_base_test bucketing_manager_test priority_queue_test progress_bar_test
+TEST_PROGRAMS = auth_test disk_alloc_test jx_test microbench multirun jx_count_obj_test jx_canonicalize_test jx_merge_test hash_table_offset_test hash_table_fromkey_test hash_table_benchmark histogram_test category_test jx_binary_test bucketing_base_test bucketing_manager_test priority_queue_test progress_bar_test skip_list_test
 
 all: $(TARGETS) catalog_query
 
