Add example target to Makefile for running example_blueprint

--- a/taskvine/src/graph/Makefile
+++ b/taskvine/src/graph/Makefile
@@ -8,4 +8,7 @@ all clean install test lint format: $(SUBDIRS)
 $(SUBDIRS): %:
 	$(MAKE) -C $@ $(MAKECMDGOALS)
 
-.PHONY: all clean install test lint format $(SUBDIRS)
+.PHONY: all clean install test lint format $(SUBDIRS) example
+
+example:
+	PYTHONPATH=../../../ python -m taskvine.src.graph.example_blueprint
